Add postman collection to test on Dev requests; A few fixes
